<resources>
    <string name="app_name">Definition</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="str_next">next</string>
    <string name="menu_settings">menu settings</string>
    <string name="computing">Computing</string>
    <string name="chinese">Chinese</string>
    <string name="politics">Politics</string>
    <string name="quiz">Quiz time</string>
    <string name="quiz_result">Quiz results</string>
    <string name="choose">Choose your topic</string>
    <string name="chineses">Chinese</string>
    <string name="computings">Computing</string>
    <string name="politic">politic</string>
    <string name="biology">Biology</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="generalpaper">General paper</string>
    <string name="geography">geography</string>
    <string name="math">Mathematics</string>
    <string name="economics">Economics</string>
    <string name="history">history\'</string>
    <string name="literature">literature</string>
    <string name="quotes">Quotes</string>
    <string name="论语">论语</string>
    <string name="弟子规">弟子规</string>
    <string name="引用句">引用句</string>
    <string name="algorithms">Algorithms</string>
    <string name="data_structure">Data structures</string>
    <string name="computing_network">Computing network</string>
    <string name="cryptography">Cryptography</string>
    <string name="shell_cmd">Shell Commands</string>
    <string name="firefox_tricks">Firefox Tricks</string>
    <string name="comp_algorithm_one">Linear search efficiency is linear O(n) time.</string>
    <string name="comp_algorithm_two">Binary search efficiency is logarithmic O(lg n) time.</string>
    <string name="comp_algorithm_three">Bubble sort efficiency is quadratic O(n2) time.</string>
    <string name="data_structure_one">A stack is a LIFO/LIFO data structure.</string>
    <string name="data_structure_two">A queue is a FIFO/LILO data structure.</string>
    <string name="data_structure_three">Stack essential attributes: data, top pointer.</string>
    <string name="data_structure_four">Queue essential attributes: data, front and rear pointers.</string>
    <string name="data_structure_five">A dictionary is a collection of key-value pairs.</string>
    <string name="data_structure_six">A linked list node has both data and link fields.</string>
    <string name="data_structure_seven">An array is a static memory allocation data structure.</string>
    <string name="data_structure_eight">A linked list is a dynamic memory allocation data structure.</string>
    <string name="data_structure_nine">Array access is constant O(1) time.</string>
    <string name="data_structure_ten">Linked list access is linear/sequental O(n) time.</string>
    <string name="comp_network_one">Binary signals can be sent over radio signals, fiber optic cables or even by hand signals.</string>
    <string name="comp_network_two">Physical – Transmission and reception of raw bit streams over a physical medium</string>
    <string name="comp_network_three">Data Link – Reliable transmission of data frames between two nodes connected by a physical layer</string>
    <string name="comp_network_four">Network – Structuring a multi-node network, including routing, addressing and traffic control</string>
    <string name="comp_network_five">Transport – Transmission of data segments between points on a network – The pigeon carrying the message</string>
    <string name="comp_network_six">Session – Managing persistent forms of connection between nodes</string>
    <string name="comp_network_seven">Presentation – Translating data into a form that can be transmitted</string>
    <string name="comp_network_eight">Application – High-Level interfaces for representing data</string>
    <string name="comp_network_nine">Mnemonic for OSI (Open Systems Interconnection) Model: Please Do Not Throw Sausage Pizza Away</string>
    <string name="comp_network_ten">Internet Relay Chat is an application layer protocol for the transfer of text messages.</string>
    <string name="comp_crypto_one">A certificate authority or certification authority (CA) is an entity that issues digital certificates. A digital certificate certifies the ownership of a public key by the named subject of the certificate.</string>
    <string name="comp_crypto_two">A public key certificate consists of a public key, an identifier of the key owner and the whole block signed by a certificate authority (CA).</string>
    <string name="comp_crypto_three">Methods to distribute public keys include public announcement, a publicly available directory, public key authority and public key certificates</string>
    <string name="comp_crypto_four">A digital signature is an authentication mechanism that enables the creator of a message to attach a code that acts as a signature.</string>
    <string name="comp_crypto_five">Cryptographic hash functions are used for message authentication, digital signatures, one-way password files, intrusion detection, virus detection and PRNGs.</string>
    <string name="comp_crypto_six">A Man-In-The-Middle (MITM) attack is where an attacker secretly relays and possibly alters the communications between two parties communicating with each other.</string>
    <string name="comp_crypto_seven">Public key or asymmetric cryptography uses a public key for encryption and a private key for decryption.</string>
    <string name="comp_shell_one">Type \'ls\' to list directories in Powershell (windows) or Terminal (Unix-like)</string>
    <string name="comp_shell_two">Type \'cd\' with the directory name to move into the directory in Powershell (Windows) or Terminal (Unix-like).</string>
    <string name="comp_shell_three">Type \'pushd\' to go into a directory then \'popd\' to go back to the directory where \'pushd\' was used in Powershell (Windows) or Terminal (Unix-like).</string>
    <string name="comp_shell_four">Type \'mkdir\' with the directory name to create a directory in Powershell (Windows) or Terminal (Unix-like).</string>
    <string name="comp_shell_five">Create a file using \'touch\' and the filename in Terminal (Unix-like systems).</string>
    <string name="comp_shell_six">Type \'cp\' with the current directory of the file you wish to copy and the destination in Powershell (Windows) or Terminal (Unix-like).</string>
    <string name="comp_shell_seven">Type \'mv\' with the current directory of the file you wish to move and the destination in Powershell (Windows) or Terminal (Unix-like).</string>
    <string name="comp_firefox_one">Press CTRL + SHIFT + M to enter Responsive Design View (useful for web developers)</string>
    <string name="comp_firefox_two">Press SHIFT + F2 then type \'restart\' to restart Firefox.</string>
    <string name="comp_firefox_three">Type \'about:config\' in the address bar and enable media.mediasource.enabled and media.mediasource.mp4.enabled to have full HTML5 Youtube playback.</string>
    <string name="comp_firefox_four"><![CDATA[The profile folder can be found by going to Help>Troubleshooting Information>Application Basics]]></string>
    <string name="comp_firefox_five"><![CDATA[If Firefox is running slowly, go to Help>Troubleshooting Information and select “Refresh Firefox”]]></string>
    <string name="comp_firefox_six">To change profiles in Firefox on a Windows system, run \'firefox -ProfileManager</string>
    <string name="comp_firefox_seven">To change profiles in Firefox on a Unix-like system, run \'firefox –ProfileManager\'</string>
    <string name="genetics">Genetics</string>
    <string name="dna">DNA</string>
    <string name="cell_structure">Cell Structure</string>
    <string name="cell_structure_one">The nucleus is the largest organelle in the cell.</string>
    <string name="cell_structure_two">The nucleus is found in all eukaryotic cells except mature phloem sieve tube elements and red blood cells</string>
    <string name="cell_structure_three">The nucleus is typically spherical, may be ovoid or lobed</string>
    <string name="cell_structure_four">The nucleus is capable of dividing prior to cell division, such that daughter cells will each get a nucleus.</string>
    <string name="cell_structure_five">The nucleus functions as a control centre for activities of the cell</string>
    <string name="cell_structure_six">The nucleus contains DNA that carries the instruction for protein synthesis.</string>
    <string name="cell_structure_seven">The nuclear envelope is composed of 2 membranes separated by a fluid-filled space of 25nm.</string>
    <string name="cell_structure_eight">The outer membrane of the nuclear envelope is continuous with another organelle, the endoplasmic reticulum.</string>
    <string name="cell_structure_nine">The nuclear envelope is perforated by nuclear pores lined by a protein octet.</string>
    <string name="dna_seven">Translation: Process by which a sequence of bases in an mRNA molecule is converted into a sequence of amino acids in a polypeptide chain</string>
    <string name="dna_six">Translation begins when an rRNA molecule within the ribosomes recognises and binds to a ‘start’ sequence on the mRNA</string>
    <string name="dna_five">mRNA stands for messenger ribonucleic acid</string>
    <string name="dna_four">mRNA is synthesised during transcription</string>
    <string name="dna_three">The base sequence of the mRNA is complementary to that of the DNA it is transcribed from</string>
    <string name="dna_two">tRNA stands for transfer ribonucleic acid</string>
    <string name="formula">Formula</string>
    <string name="definition">Facts</string>
    <string name="quantities">Quantities</string>
    <string name="electro">Electromagnetism</string>
    <string name="nuclear">Nuclear Physics</string>
    <string name="line">Line Spectra</string>
    <string name="quantities_one">mass m kg</string>
    <string name="quantities_two">length l m</string>
    <string name="quantities_three">time t s</string>
    <string name="quantities_four">electric current I A</string>
    <string name="quantities_five">thermodynamic temperature T K</string>
    <string name="quantities_six">amount of substance n mol</string>
    <string name="quantities_seven">acceleration a m s–2</string>
    <string name="quantities_eight">acceleration of free fall g m s–2</string>
    <string name="quantities_nine">activity of radioactive source A Bq</string>
    <string name="physics_fact">Equilibria Fact</string>
    <string name="thermo">Thermodynamics</string>
    <string name="fact_one">An irreversible reaction proceeds in one direction until one of the reactants is used up.</string>
    <string name="fact_six">Heterogeneous Equilibrium: The substances involved in the reaction are in at least 2 or more physical states.</string>
    <string name="fact_five">The Equilibrium Law:  It is the mathematical relationship which relates the amount of the species in an equilibrium mixture in terms of concentrations or partial pressures.</string>
    <string name="fact_four">The Equilibrium constant is a constant value at any given temperature.</string>
    <string name="fact_three">The Equilibrium constant is a constant value at any given temperature.</string>
    <string name="fact_two">Equilibrium contants are not affected by changes in concentration or pressure of reactants or products.</string>
    <string name="stats">Statistics</string>
    <string name="population">Populations</string>
    <string name="litho">Lithosphere</string>
    <string name="rules">Math Rules</string>
    <string name="facts">Facts</string>
</resources>