<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <Button
        android:id="@+id/comp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/algorithms"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="94dp"
        android:onClick="comp_topic1"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_structure"
        android:layout_below="@id/comp1"
        android:id="@+id/button3"
        android:onClick="comp_topic2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button3"
        android:text="@string/computing_network"
        android:id="@+id/button4"
        android:onClick="comp_topic3"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cryptography"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        android:id="@+id/button5"
        android:onClick="comp_topic4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shell_cmd"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:id="@+id/button6"
        android:onClick="comp_topic5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firefox_tricks"
        android:layout_below="@+id/button6"
        android:layout_alignParentStart="true"
        android:onClick="comp_topic6"/>


</RelativeLayout>