<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/electro"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:onClick="physics_topic1"
        android:id="@+id/button7" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantities"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:id="@+id/button2"
        android:onClick="physics_topic2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/definition"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="physics_topic3"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/formula"
        android:id="@+id/button4"
        android:onClick="physics_topic4"
        android:layout_below="@+id/button7"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/line"
        android:id="@+id/button5"
        android:onClick="physics_topic5"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuclear"
        android:id="@+id/button6"
        android:onClick="physics_topic6"
        android:layout_above="@+id/button"
        android:layout_alignParentStart="true" />


</RelativeLayout>