<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9fa8da"
        android:fontFamily="sanserif"
        android:padding="15dp"
        android:text="@string/fact_one"
        android:textSize="14sp"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ba68c8"
        android:fontFamily="sanserif"
        android:padding="15dp"
        android:text="@string/fact_two"
        android:textSize="14sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:background="#18ffff"
        android:fontFamily="sanserif"
        android:padding="15dp"
        android:text="@string/fact_three"
        android:textSize="14sp"
        android:id="@+id/textView3" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9ccc65"
        android:fontFamily="sanserif"
        android:padding="15dp"
        android:text="@string/fact_four"
        android:textSize="14sp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:id="@+id/textview4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffff00"
        android:fontFamily="sanserif"
        android:padding="15dp"
        android:text="@string/fact_five"
        android:textSize="14sp"
        android:layout_below="@+id/textview4"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff7043"
        android:fontFamily="sanserif"
        android:padding="15dp"
        android:text="@string/fact_six"
        android:textSize="14sp"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

</RelativeLayout>